# Backend

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pull-request-ci.yml
src/: manage.py
src/naming_check_backend/: __init__.py  main.py
src/naming_check_backend/application/interfaces/: __init__.py
src/naming_check_backend/application/services/: __init__.py
src/naming_check_backend/application/use_cases/: __init__.py
src/naming_check_backend/application/use_cases/offline/: __init__.py  offline_data_refresh.py
src/naming_check_backend/application/use_cases/stage1/: __init__.py  logo_comparison.py  registration_check.py  text_infringement_check.py
src/naming_check_backend/application/use_cases/stage2/: __init__.py  external_job_dispatch.py  webhook_callback_processing.py
src/naming_check_backend/domain/: exceptions.py
src/naming_check_backend/domain/policies/: __init__.py  stage2_deduplication.py
src/naming_check_backend/domain/repositories/: __init__.py
src/naming_check_backend/infrastructure/async_pipeline/: __init__.py  async_result_store.py  job_queue.py  result_delivery.py  worker.py
src/naming_check_backend/infrastructure/collectors/: __init__.py  external_sources.py
src/naming_check_backend/infrastructure/config/: __init__.py
src/naming_check_backend/infrastructure/ml/: __init__.py
src/naming_check_backend/infrastructure/observability/: __init__.py  async_monitoring.py
src/naming_check_backend/infrastructure/persistence/clickhouse/: __init__.py
src/naming_check_backend/infrastructure/preprocessing/: __init__.py
src/naming_check_backend/infrastructure/search/: __init__.py
src/naming_check_backend/presentation/api/: dependencies.py  router.py
src/naming_check_backend/presentation/api/v1/: router.py
src/naming_check_backend/presentation/api/v1/routes/checks/: __init__.py  logo_comparison.py  registration_check.py  text_infringement.py
src/naming_check_backend/presentation/api/v1/routes/webhooks/: __init__.py  stage2_results.py
src/naming_check_backend/presentation/schemas/: __init__.py  contracts.py
src/naming_check_backend/shared/: settings.py
src/tests/: conftest.py
src/tests/naming_check_backend/domain/policies/: test_stage2_deduplication.py
src/tests/naming_check_backend/presentation/api/: conftest.py
tests/: conftest.py
tests/integration/api/: test_health.py
tests/unit/application/use_cases/: test_external_job_dispatch.py
(+2 files in other folders)
